[tool.poetry]
name = "rubus"
version = "0.1.0-alpha.0"
description = "Telegram bot for my friends"
authors = ["Akke Luukkonen <akke@luukkonen.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[tool.poetry.scripts]
rubus = "rubus.main:main"

[build-system]
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"
