[tool.poetry]
name = "rubus"
version = "0.2.1"
description = "Telegram bot for my friends"
authors = ["Akke Luukkonen <akke@luukkonen.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.2"
Pillow = "^6.2"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[tool.poetry.scripts]
rubus = "rubus.main:main"

[build-system]
requires = ["poetry==1.0.0"]
build-backend = "poetry.masonry.api"
