[tool.poetry]
name = "rubus"
version = "0.2.2"
description = "Telegram bot for my friends"
authors = ["Akke Luukkonen <akke@luukkonen.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
python-telegram-bot = "^12.3"
Pillow = "^7.0"
requests = "^2.22"
beautifulsoup4 = "^4.8"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[tool.poetry.scripts]
rubus = "rubus.main:main"

[build-system]
requires = ["poetry==1.0.3"]
build-backend = "poetry.masonry.api"
